--- a/src/app/face-snap/face-snap.component.html
+++ b/src/app/face-snap/face-snap.component.html
@@ -4,7 +4,7 @@
   <p>{{ description }}</p>
   <p>FaceSnap créée le {{ createdAt }}</p>
   <p>
-    <button (click)="onToggleSnap()">{{ snapButtonText }}</button>
+    <button (click)="toggleSnap()">{{ snapButtonText }}</button>
     🤌 {{ snaps }}
   </p>
 </div>
