--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-face-snap></app-face-snap>
+<app-face-snap [faceSnap]="bulbizarreSnap"></app-face-snap>
+<app-face-snap [faceSnap]="carapuceSnap"></app-face-snap>
+<app-face-snap [faceSnap]="salamecheSnap"></app-face-snap>
